# vara-eth-demo

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs  vara_eth_demo_client.idl
client/src/: lib.rs  vara_eth_demo_client.rs
ethereum/: .env.example  README.md  foundry.toml
ethereum/script/: VaraEthDemoAbi.s.sol  VaraEthDemoCaller.s.sol
ethereum/src/: IMirror.sol  IRouter.sol  IVaraEthDemo.sol  IVaraEthDemoCallbacks.sol  IWrappedVara.sol  VaraEthDemoAbi.sol  VaraEthDemoCaller.sol
ethereum/test/: EthAppWithEventsAbi.t.sol  VaraEthDemoCaller.t.sol
src/: lib.rs
tests/: gtest.rs
